--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.2"
+    "react-markdown": "^9.0.1",
+    "socket.io-client": "^4.7.2",
+    "uniquebrowserid": "^0.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
