--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "upload": "node utils/fileLoader.js",
-    "ui": "cd frontend && npx vite --port 3000"
+    "ui": "cd frontend && npx vite --port 3000",
+    "server": "node server.js"
   },
   "author": "",
   "license": "ISC",
